--- a/README
+++ b/README
@@ -3,3 +3,5 @@ MISO (Mixture of Isoforms) is a probabilistic framework that quantitates the exp
 MISO uses the inferred assignment of reads to isoforms to quantitate the abundances of the underlying set of alternative mRNA isoforms. Confidence intervals over estimates can be obtained, which quantify the reliability of the estimates. 
 
 Please see http://genes.mit.edu/burgelab/miso/docs/ for MISO manual and documentation.
+
+*Note: MISO is no longer maintained. This repository is left for archival purposes.*
